# lint-crate-template

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs
tests/: uitest.rs
tests/ui/: hello_marker.rs  hello_marker.stderr
