[package]
name = "lint-crate-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
marker_api = "0.3"
marker_utils = "0.3"

[dev-dependencies]
marker_uitest = "0.3"

[[test]]
name = "uitest"
harness = false

[workspace.metadata.marker.lints]
marker_lints = "0.3"
